--- a/src/presentational/Pages/Prejudice/landing.css
+++ b/src/presentational/Pages/Prejudice/landing.css
@@ -9,19 +9,18 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 0.5s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #cacaca;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
