appbar/footer change

--- a/src/presentational/Pages/Predict/predict.scss
+++ b/src/presentational/Pages/Predict/predict.scss
@@ -1,6 +1,6 @@
 
 .predict {
-  background-color: #cacaca;
+  background-color: #fafafa;
   min-height: 80vh;
   display: flex;
   flex-direction: column;
