--- a/src/presentational/TopBar/topbar.module.scss
+++ b/src/presentational/TopBar/topbar.module.scss
@@ -5,9 +5,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
-  > *{
-    font-size: 18pt !important;
-  font-weight: 700 !important;
-  }
+}
+
+.title {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.normalTab {
+  font-size: 16px;
+  font-weight: 700;
 }
