--- a/src/presentational/Components/ActionBloc/actionbloc.scss
+++ b/src/presentational/Components/ActionBloc/actionbloc.scss
@@ -1,10 +1,23 @@
-.container {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(20px + 2vmin);
-    color: white;
+.actionbloc {
+    background-color: #E9F2F2;
+    .textbloc{
+        position: relative;
+        top:0;
+        left: 0;
+        height: 350px;
+        padding: 30px 20px 0px 20px;
+        z-index: 1000 !important;
+        overflow: hidden;
+    }
+    .textbloc:before{
+        content: "";
+        position: absolute;
+        width: 200%;
+        height: 200%;
+        top: 0%;
+        left: 0%;
+        z-index: -1;
+        background: url(./button.svg) 0 0 no-repeat;
+        transform: rotate(30deg);
+    }
 }
