--- a/src/presentational/TopBar/topbar.module.scss
+++ b/src/presentational/TopBar/topbar.module.scss
@@ -1,6 +1,6 @@
 
 .topbar {
-  background-color: #333;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
