--- a/src/presentational/Footer/footer.scss
+++ b/src/presentational/Footer/footer.scss
@@ -15,7 +15,14 @@
     padding: 25px 0px;
   }
   .bg_footer_left {
-    background-image: linear-gradient(90deg,#ff2600 0% 10.35%,transparent 10.35% 15.35%, #F2EDE9 15.35% 20.00%, transparent 20.00% 24.00%, #ff2600 24.00% 28.00%, transparent 28.00% 32.20%, #F2EDE9 32.20% 37.00%, transparent 37.00% 60.00%, #ff2600 60.00% 65.00%,transparent 65.00% 70.35%, #273a3c 70.35% 80.00%, transparent 80% 84%, #273a3c 84% 92%, transparent 92% 97%,#273a3c 97% 100%,);
+    background-image: linear-gradient(90deg,#cc9423 15%,transparent 15% 17%,#ff2600 17% 30%, transparent 30% 32.5%, #F2EDE9 32.5% 35%, transparent 35% 37.5%, #ff2600 37.5% 41%, transparent 41% 43%, #F2EDE9 43% 47%, transparent 47% 60%, #ff2600 60% 65%,transparent 65%);
+    background-size: auto auto;
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  .bg_footer_right {
+    background-image: linear-gradient(90deg, transparent 30%, #ff2600 30% 35%,transparent 35% 40%,  #ff2600 40% 56%,#273a3c 56% 65%, transparent 65% 70%, #ff2600 70% 74%, #273a3c 74% 82%, transparent 82% 85%,#273a3c 85% 100%,);
     background-size: auto auto;
     position: relative;
     width: 100%;
@@ -30,8 +37,8 @@
     /* Safari 4.0 - 8.0 */
   @-webkit-keyframes footer {
     0%   {left:0px;}
-    25%  { left:50px;}
-    50%  {left:50px;}
+    25%  {left:250px;}
+    50%  {left:250px;}
     75%  {left:0px;}
     100% {left:0px;}
   }
@@ -39,8 +46,8 @@
   /* Standard syntax */
   @keyframes footer {
     0%   {left:0px;}
-    25%  { left:50px;}
-    50%  {left:50px;}
+    25%  {left:250px;}
+    50%  {left:250px;}
     75%  {left:0px;}
     100% {left:0px;}
   }
