--- a/src/presentational/Pages/Warroom/warroom.scss
+++ b/src/presentational/Pages/Warroom/warroom.scss
@@ -4,6 +4,12 @@
   padding-right: 0px;
   min-height: 100vh;
   color: #222;
+  .menu {
+    padding-right: 80px;
+  }
+  .vizbloc{
+    padding-left: 25%;
+  }
   .fixed {
     position: fixed;
 
@@ -35,7 +41,13 @@
   .header_bd{
     border-left: 3px #273A3C solid;
     padding-left: 10px;
-    margin: 15px 0px;
+    margin: 35px 0px 20px 0px;
+  }
+  .ranking {
+    font-size: 2em;
+  }
+  .ranking_s {
+    font-size: 1.4em;
   }
 }
 
