RWD on the way, but form part need to be fix

--- a/src/presentational/Pages/Predict/form/form.module.scss
+++ b/src/presentational/Pages/Predict/form/form.module.scss
@@ -2,6 +2,8 @@
  
   .checkBox__dir{
     flex-direction: row;
+    flex-wrap : wrap;
+    width: 430px;
   }
   
   .section__brief{
@@ -39,3 +41,17 @@
     background-color:#E9F2F2;
   }
   
+  .form__label{
+    display: inline-block;
+    width:60px;
+    margin-top: 12px;
+  }
+
+  .form__option__label{
+    font-size: 12px;
+  }
+  .form__button{
+    margin-bottom: 30px;
+    margin-top: 30px;
+
+  }
