predict RWD rough fix

--- a/src/presentational/Pages/Predict/form/form.module.scss
+++ b/src/presentational/Pages/Predict/form/form.module.scss
@@ -3,14 +3,14 @@
   .checkBox__dir{
     flex-direction: row;
     flex-wrap : wrap;
-    width: 430px;
+    width: 32vw;
   }
   
   .section__brief{
     margin-left: 10px;
     white-space:nowrap;
   }
-  
+
 
   .form__oval_left{
     border-radius: 40vh 0vh 0vh 40vh;
