--- a/src/presentational/Pages/Predict/predict.module.scss
+++ b/src/presentational/Pages/Predict/predict.module.scss
@@ -1,4 +1,3 @@
-
 .predict {
   background-color: #fafafa;
   min-height: 80vh;
@@ -10,7 +9,7 @@
 }
 
 .section {
-  min-width: 30vw;
+  width: 100%;
 }
 
 .window__section{
@@ -42,7 +41,6 @@
    text-shadow: 6px -8px white, 4px -8px #CC9423,8px -8px #CC9423, 6px -6px #CC9423, 6px -10px #CC9423, 8px -10px #CC9423;
 }
 
-
 .predict__subtitle__vertical{
   writing-mode: vertical-lr;
   text-orientation: upright;
@@ -66,11 +64,6 @@
   writing-mode: vertical-lr;
 }
 
-
-.checkBox__dir{
-  flex-direction: row;
-}
-
 .date{
   width: 30px;
   margin-top: 5vh;
@@ -81,22 +74,12 @@
   }
 }
 
-.date__sm{
-  width: 16px;
-  margin-top: 5vh;
-  margin-left: 50px;
-  font:{
-    family: Noto Sans; 
-    weight: bold;
-    size: 0.75rem;
-  }
-}
-
 .date_gold{
   color:#CC9423;
 }
 
 .section__brief{
+  margin-left: 10px;
   white-space:nowrap;
 }
 
