--- a/src/presentational/Pages/Warroom/warroom.scss
+++ b/src/presentational/Pages/Warroom/warroom.scss
@@ -1,54 +1,56 @@
 .warroom{
   margin-top: 40px;
-  padding-left: 50px;
   padding-right: 0px;
   min-height: 100vh;
   color: #222;
-  .menu {
-    padding-right: 80px;
+  // Global
+  .p_2{
+    padding: 16px;
   }
-  .vizbloc{
-    padding-left: 25%;
-  }
-  .fixed {
-    position: fixed;
-
-  }
-  .padding_15{
-    padding: 15px;
+  .m_t_2{
+    margin-top: 16px;
   }
   .img{
     width:100%;
     height: auto;
-  }
-  .bg1 {
-    background-color: #CC9423;
-  }
-  .bg2 {
-    background-color: #E9F2F2;
-  }
-  .bg3 {
-    background-color: #B2ABA1;
-  }
-  .bg4 {
-    background-color: #FF2600;
-  }
-  .nav {
-    border: #CC9423 solid 1px;
-    margin-top: 30px;
-    background-color: #fff;
-  }  
+  } 
   .header_bd{
     border-left: 3px #273A3C solid;
     padding-left: 10px;
     margin: 35px 0px 20px 0px;
   }
-  .ranking {
-    font-size: 2em;
+  .divider_heavy{
+    border-top: 3px #273A3C solid;
+    margin-top: 10px;
   }
-  .ranking_s {
-    font-size: 1.4em;
+  // blocks
+  .menu {
+    padding: 0px 80px;
+    position: fixed;
+    .nav {
+      border: #CC9423 solid 1px;
+      margin-top: 30px;
+      background-color: #fff;
+    } 
+  }
+  .vizbloc{
+    padding-left: 25%;
+    padding-bottom: 200px;
+    .ranking {
+      font-size: 2em;
+      font-weight: 700;
+      color: #CC9423;
+    }
+    .ranking_s {
+      font-size: 1.4em;
+    }
+    .hotresult{
+      .highlight_color{
+        color: #CC9423;
+      }
+    }
   }
 }
+
 
 
