Spread static elements ok
1. added iron imgs
2. rearrange the layout
3. added open data part

--- a/src/presentational/Pages/Spread/spread.module.scss
+++ b/src/presentational/Pages/Spread/spread.module.scss
@@ -148,6 +148,11 @@
     border-left: 2px solid black;
   }
 
+  .spread__link{
+    color: #CC9423;
+    text-decoration: none;
+  }
+
   .voice__dropDownMenu{
     display: block;
     width: 100px;
