--- a/src/presentational/Components/LineGraph/linegraph.scss
+++ b/src/presentational/Components/LineGraph/linegraph.scss
@@ -1,10 +1,4 @@
 .linegraph {
-    background-color: #323232;
-    min-height: 50vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+    width: 100%;
+    height: 15px;
 }
