--- a/src/presentational/Pages/Warroom/warroom.scss
+++ b/src/presentational/Pages/Warroom/warroom.scss
@@ -1,11 +1,11 @@
 .warroom{
   margin-top: 40px;
   padding-right: 0px;
-  min-height: 100vh;
+  // min-height: 100vh;
   color: #222;
   // Global
   .p_2{
-    padding: 16px;
+    // padding: 16px;
   }
   .m_t_2{
     margin-top: 16px;
@@ -16,7 +16,7 @@
   } 
   .header_bd{
     border-left: 3px #273A3C solid;
-    padding-left: 10px;
+    // padding-left: 10px;
     margin: 35px 0px 20px 0px;
   }
   .divider_heavy{
@@ -34,7 +34,7 @@
     } 
   }
   .vizbloc{
-    padding-left: 25%;
+    // padding-left: 25%;
     padding-bottom: 200px;
     .ranking {
       font-size: 2em;
